discussion/kv_engine/174669/174669_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Add "wait-for-persistence" to rangeScanCreate

Add to the range-scan-create path a "wait-for-persistence" for
feature which allows the clients creation to specify a uuid/seqno
and timeout.

If the vbucket uuid matches and the seqno hasn't been persisted
the command will wait for the timeout (using ewouldblock).

This now means that the range-scan-create path now can perform two
ewouldblock steps.

1) The wait for persistence to be satisfied and notify
2) The wait for RangeScanCreateTask to run and notify

The state that an in-progress range-scan-create is in is now captured
in the state variable which is stored in the engine-specific.

* Pending -  is the initial state
* WaitForPersistence - waiting for SeqnoPersistenceRequest
* Creating - waiting for RangeScanCreateTask

Change-Id: I8090059f16ad4aa8e7768d73fb3f7cdd746ffb6a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-05-18 16:11:54.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-18 16:45:01.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17556/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan_optional_configuration.h:33:10: error: no template named "optional" in namespace "std" [clang-diagnostic-error]
    std::optional<std::chrono::milliseconds> timeout;
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan_optional_configuration.h:33:24: error: no member named "chrono" in namespace "std" [clang-diagnostic-error]
    std::optional<std::chrono::milliseconds> timeout;
                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17556/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan_optional_configuration.h:33:10:
error: no template named "optional" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17556/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16577/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46208/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38818/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7166/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19320/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20344/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19669/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18531/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27726/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7265/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
